<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">标准地址库</string>
    
    
    <string name="query_name">查询</string>
    <string name="query_hint">输入地名</string>
    <string name="extent">选取范围</string>
    <string name="un_mark">取消标注</string>
    <string name="loading">加载数据中，请稍候</string>
    <string name="marking">标注中，请稍候</string>
    <string name="un_marking">取消标注中，请稍候</string>
    <string name="confirm_mark">确认标注？</string>
    <string name="confirm_un_mark">确认取消标注？</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>

    <!-- 网络连接错误 -->
    <string name="online_error">网络连接错误，请检查网络是否连接</string>
    <string name="no_child">没有下一级</string>
    <string name="title">提示</string>
    <string name="know">知道了</string>
    <string name="success">标注成功</string>
    <string name="fasle">标注失败，请再试一遍</string>
    <string name="show_graphic_fasle">系统异常，请稍后再试</string>
    <string name="un_mark_success">取消标注成功</string>
    <string name="un_mark_fasle">取消标注失败，请再试一遍</string>

    <!-- 登录 -->
    <string name="username">帐  号</string>
    <string name="write_username">请输入帐号</string>
    <string name="password">密  码</string>
    <string name="write_password">请输入密码</string>
    <string name="save">记住密码</string>
    <string name="login">登录</string>
    <string name="is_empty">用户名和密码不能为空</string>
    <string name="system_error">系统异常，请稍后再试</string>
    <string name="logining">正在登录中，请稍后...</string>
    <string name="logout">注销</string>
    <string name="confirm_logout">确认注销？</string>
    <string name="none">没有新的列表项了</string>

</resources>